# console-ui

./: Cargo.toml  README.md
.claude/: settings.local.json
console-ui/: Cargo.toml
console-ui-demo/: Cargo.toml
console-ui-demo/src/: main.rs
console-ui-demo/src/screens/: border_demo.rs  color_palette.rs  layout_demo.rs  main_menu.rs  mod.rs  save_to_file.rs  table_demo.rs
console-ui/src/: lib.rs
console-ui/src/border/: mod.rs  style.rs
console-ui/src/canvas/: canvas.rs  cell.rs  mod.rs  render.rs
console-ui/src/color/: downgrade.rs  mod.rs  types.rs
console-ui/src/event/: keys.rs  mod.rs
console-ui/src/layout/: anchor.rs  mod.rs  region.rs  split2.rs  split3.rs  split4.rs
console-ui/src/serial/: json_impl.rs  mod.rs  types.rs
console-ui/src/term/: caps.rs  mod.rs  platform.rs  raw.rs
console-ui/src/widget/: menu.rs  mod.rs  panel.rs  table.rs  textblock.rs  traits.rs
