[package]
name        = "console-ui"
version     = "0.1.0"
edition     = "2021"
description = "Cross-platform console UI library — VT-100 through True Color 24-bit"
license     = "MIT"

[dependencies]
crossterm     = "0.28"
unicode-width = "0.2"
bitflags      = "2"
serde         = { version = "1", features = ["derive"], optional = true }
serde_json    = { version = "1", optional = true }

[features]
default = ["color", "serde-json"]
# Disable to strip the 256-color downgrade palette (saves ~3 KB, for tiny targets)
color      = []
# Enable JSON serialization of screen definitions
serde-json = ["dep:serde", "dep:serde_json"]
